# wifi-client

./: Cargo.toml  README.md  nmcli.sh
src/: error.rs  main.rs  wifi_data.rs
