[package]
name = "wifi-client"
version = "0.2.0"
edition = "2021"
authors = ["Pravith B A <pravithba10@gmail.com>"]
license = "MIT"
description = "A cli tool for connecting to wifi"
readme = "README.md"
homepage = "https://github.com/PravithBA/wifi-client"
repository = "https://github.com/PravithBA/wifi-client"
keywords = ["cli", "wifi"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.5.3"
regex = "1.7.3"
spinners = "4.1.0"
